@@ -233,7 +233,7 @@
 {
 	cg_upnp_ssdp_setannouncecount(2);
 	
-	//[super search];
+	[super search];
 	[super searchWithST:[NSString stringWithUTF8String:CG_UPNPAV_DMS_DEVICE_TYPE]];
 	[super searchWithST:[NSString stringWithUTF8String:CG_UPNPAV_DMR_DEVICE_TYPE]];
 }
