@@ -1,3 +1,7 @@
+2011-02-08  Satoshi Konno <skonno@cybergarage.org>
+	* Added cg_upnp_ssdprequest_print() and cg_upnp_ssdpresponse_print().
+	* Added some debug messages.
+
 2010-10-26  Satoshi Konno <skonno@cybergarage.org>
 	* Added cg_upnp_controlpoint_isrunning().
 
